# Projects

./: .gitmodules  CODE_OF_CONDUCT.md  README.md  Tarragona
Alicante/: readme.md
Alicante/Abril2019/: readme.md
Alicante/Julio2020/: readme.md
Alicante/July2020/: readme.md
Alicante/June2024/: readme.md
Alicante/Mayo2022/: readme.md
Almeria/: readme.md
Asturias/: read.me  readme.md
Asturias/Dementia_OASIS/: FSL.csv  FSL_good.csv  RAW_1.csv  RAW_2.csv  RAW_3.csv  README.md  T88.csv  custom_dataset.py  custom_network.py  dementia_colab.ipynb  dementia_network_class.py  dementia_tree_class.py  functions_transform.py  hyperparameter_optimization.py  misc_aux.py  pickle_aux.py  requirements.txt  results.csv  saturdays-dementia_main.py  seed.txt  tmp_df.csv  transform_images.py
Barcelona/: readme.md
Barcelona/June2018/: readme.md  (+1 more)
Copenhage/: readme.md
CostaRica/: readme.md
Donostia/: readme.md
Eda/: readme.md
Guadalajara/: readme.md
Guayaquil/: readme.md
Hermosillo/: readme.md
Kigali/: readme.md
LATAM_remote/: readme.md
Lapaz/: readme.md
Madrid/: Dec2019  readme.md  readme.me
Madrid/June2024/RolEmpatIA-main/: ANALISIS_CLUSTERERS_PRE_EMBEDDINGS.txt  PARTIDAA.csv  Prueba_WS.ipynb  README.md  TestRol (1) (4).ipynb  TestRol_Final.ipynb  prueba_ws.py  pyproject.toml  rol_word2vec_model.model  small_word2vec_model.model
Monterrey/: readme.md
Quito/: readme.md
Santiago/: readme.md
Sevilla/: readme.md
StudentExperience-ResultsAI-main/: README.md
Tarragona/: readme.md
Tgn/: readme.md
Valencia/: readme.md
Zaragoza/: readme.md
(+1842 files in other folders)
