[tool.poetry]
name = "final proyect saturday ia"
version = "0.1.0"
description = ""
authors = ["Cuenta Personal <oliverio89@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
unidecode = "^1.3.8"


## Añadir dependencias de solo desarrollo poetry add --dev
ipykernel = "^6.29.4"
pandas = "^2.2.2"
numpy = "^1.26.4"
nltk = "^3.8.1"
scipy = "1.12"
gensim = "^4.3.2"
jupyter = "^1.0.0"
scikit-learn = "^1.5.0"
matplotlib = "^3.9.0"
hdbscan = "^0.8.36"
seaborn = "^0.13.2"
dbscan = "^0.0.12"
joblib = "^1.4.2"

[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "^24.4.2"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
